--- a/pharmaccess.bib
+++ b/pharmaccess.bib
@@ -21,6 +21,16 @@
   file = {/Users/dkapitan/Zotero/storage/WR5Z5J2J/African Union Health Information Exchange Guidelin.pdf;/Users/dkapitan/Zotero/storage/KQHKVLBT/african-union-health-information-exchange-guidelines-and-standards.html}
 }
 
+@article{abbas2021business,
+  title = {Business {{Data Sharing}} through {{Data Marketplaces}}: {{A Systematic Literature Review}}},
+  shorttitle = {Business {{Data Sharing}} through {{Data Marketplaces}}},
+  author = {Abbas, Antragama Ewa and Agahari, Wirawan and van de Ven, Montijn and Zuiderwijk, Anneke and de Reuver, Mark},
+  year = {2021},
+  month = jan,
+  journal = {BLED 2021 Proceedings},
+  file = {/Users/dkapitan/Zotero/storage/WNEUH8D3/13.html}
+}
+
 @article{abbasian2023phas,
   title = {{{PHAS}}: {{An End-to-End}}, {{Open-Source}}, and {{Portable Healthcare Analytics Stack}}},
   shorttitle = {{{PHAS}}},
@@ -226,6 +236,25 @@
   file = {/Users/dkapitan/Zotero/storage/KT8TWR62/Bagayoko et al. - 2023 - Effect of high-risk versus low-risk pregnancy at t.pdf}
 }
 
+@article{baldwin2008architecture,
+  title = {The {{Architecture}} of {{Platforms}}: {{A Unified View}}},
+  shorttitle = {The {{Architecture}} of {{Platforms}}},
+  author = {Baldwin, Carliss and Woodard, C. Jason},
+  year = {2008},
+  month = sep,
+  journal = {Platforms, Markets and Innovation},
+  doi = {10.2139/ssrn.1265155},
+  abstract = {The central role of "platform" products and services in mediating the activities of disaggregated "clusters" or "ecosystems" of firms has been widely recognized. But platforms and the systems in which they are embedded are very diverse. In particular, platforms may exist within firms as product lines, across firms as multi-product systems, and in the form of multi-sided markets. In this paper we argue that there is a fundamental unity in the architecture of platforms. Platform architectures are modularizations of complex systems in which certain components (the platform itself) remain stable, while others (the complements) are encouraged to vary in crosssection or over time. Among the most stable elements in a platform architecture are the modular interfaces that mediate between the platform and its complements. These interfaces are even more stable than the interior core of the platform, thus control over the interfaces amounts to control over the platform and its evolution. We describe three ways of representing platform architectures: network graphs, design structure matrices and layer maps. We conclude by addressing a number of fundamental strategic questions suggested by a unified view of platforms.},
+  file = {/Users/dkapitan/Zotero/storage/H56B5TLV/Baldwin and Woodard - 2008 - The Architecture of Platforms A Unified View.pdf}
+}
+
+@article{baldwinarchitecture,
+  title = {The {{Architecture}} of {{Platforms}}: {{A Unified View}}},
+  author = {Baldwin, Carliss Y and Woodard, C Jason},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/F936GGNV/Baldwin and Woodard - The Architecture of Platforms A Unified View.pdf}
+}
+
 @article{barcenafedxai,
   title = {Fed-{{XAI}}: {{Federated Learning}} of {{Explainable Artificial Intelligence Models}}},
   author = {B{\'a}rcena, Jos{\'e} Luis Corcuera and Daole, Mattia and Ducange, Pietro and Marcelloni, Francesco and Renda, Alessandro and Ruffini, Fabrizio and Schiavo, Alessio},
@@ -262,6 +291,71 @@
   abstract = {Recently, significant milestones have been achieved in the field of healthcare data analysis. However, alongside these accomplishments, substantial data-related challenges have emerged in the domain of big data management. Modern healthcare projects are no more dealing with a single data repository but many heterogeneous ones and must overcome data variety, privacy and governance issues. Yet, current solutions face a privacy-decentralization trade-off. To address this dual challenge, we introduce HealthMesh, a novel layered architectural framework based on the Data Mesh principles, providing a domaindecentralised paradigm. In addition, the framework incorporates a Semantic Data Model which establishes robust governance, enables interoperability and guarantees policy compliance for all the data assets. To demonstrate the capabilities of the proposed approach, we provide an illustrative example inspired by the use case of the INCISIVE project for breast cancer analytics. Overall, this work makes a significant contribution on collecting key challenges, identifying actors and providing a set of components and guidelines for establishing a holistic framework for the complex field of healthcare data management.},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/9SS5P8VB/bidquert2024healthmesh.pdf}
+}
+
+@article{braa2004networks,
+  title = {Networks of Action: Sustainable Health Information Systems across Developing Countries},
+  shorttitle = {Networks of Action},
+  author = {Braa, J{\o}rn and Monteiro, Eric and Sahay, Sundeep},
+  year = {2004},
+  journal = {MIS quarterly},
+  eprint = {25148643},
+  eprinttype = {jstor},
+  pages = {337--362},
+  publisher = {JSTOR},
+  urldate = {2024-05-15},
+  file = {/Users/dkapitan/Zotero/storage/P6A55RBN/Braa et al. - 2004 - Networks of action sustainable health information.pdf}
+}
+
+@article{braa2007developing,
+  title = {Developing {{Health Information Systems}} in {{Developing Countries}}: {{The Flexible Standards Strategy}}},
+  shorttitle = {Developing {{Health Information Systems}} in {{Developing Countries}}},
+  author = {{Braa} and {Hanseth} and {Heywood} and {Mohammed} and {Shaw}},
+  year = {2007},
+  journal = {MIS Quarterly},
+  volume = {31},
+  number = {2},
+  eprint = {10.2307/25148796},
+  eprinttype = {jstor},
+  pages = {381},
+  issn = {02767783},
+  doi = {10.2307/25148796},
+  urldate = {2024-05-15},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/EZGZZQ8E/Braa et al. - 2007 - Developing Health Information Systems in Developin.pdf}
+}
+
+@misc{braa2023design,
+  title = {Design {{Theory}} for {{Societal Digital Transformation}}: {{The Case}} of {{Digital Global Health}}},
+  shorttitle = {Design {{Theory}} for {{Societal Digital Transformation}}},
+  author = {Braa, Jorn and Sahay, Sundeep and Monteiro, Eric},
+  year = {2023},
+  month = nov,
+  eprint = {2311.09173},
+  primaryclass = {cs},
+  doi = {0.17705/1jais.00816},
+  urldate = {2024-05-15},
+  abstract = {With societal challenges, including but not limited to human development, equity, social justice, and climate change, societal-level digital transformation (SDT) is of imminent relevance and theoretical interest. While building on local-level efforts, societal-level transformation is a nonlinear extension of the local level. Unfortunately, academic discourse on digital transformation has largely left SDT unaccounted for. Drawing on more than 25 years of intensive, interventionist research engagement with the digital transformation of public healthcare information management and delivery in more than 80 countries in the Global South, we contribute to theorizing SDT in the form of a design theory consisting of six interconnected design principles. These design principles articulate the interplay and tensions of accommodating over time increased diversity and flexibility in digital solutions, while simultaneously connecting local, national, and regional/ global efforts.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Computers and Society},
+  file = {/Users/dkapitan/Zotero/storage/MQPIF64I/Braa et al. - 2023 - Design Theory for Societal Digital Transformation.pdf;/Users/dkapitan/Zotero/storage/3VR393II/2311.html}
+}
+
+@article{cascini2024health,
+  title = {Health Data Sharing Attitudes towards Primary and Secondary Use of Data: A Systematic Review},
+  shorttitle = {Health Data Sharing Attitudes towards Primary and Secondary Use of Data},
+  author = {Cascini, Fidelia and Pantovic, Ana and {Al-Ajlouni}, Yazan A. and Puleo, Valeria and De Maio, Lucia and Ricciardi, Walter},
+  year = {2024},
+  month = may,
+  journal = {eClinicalMedicine},
+  volume = {71},
+  pages = {102551},
+  issn = {2589-5370},
+  doi = {10.1016/j.eclinm.2024.102551},
+  urldate = {2024-03-21},
+  abstract = {Background To receive the best care, people share their health data (HD) with their health practitioners (known as sharing HD for primary purposes). However, during the past two decades, sharing for other (i.e., secondary) purposes has become of great importance in numerous fields, including public health, personalized medicine, research, and development. We aimed to conduct the first comprehensive overview of all studies that investigated people's HD sharing attitudes---along with associated barriers/motivators and significant influencing factors---for all data types and across both primary and secondary uses. Methods We searched PubMed, MEDLINE, PsycINFO, Web of Science, EMBASE, and CINAHL for relevant studies published in English between database inception and February 28, 2023, using a predefined set of keywords. Studies were included, regardless of their design, if they reported outcomes related to attitudes towards sharing HD. We extracted key data from the included studies, including the type of HD involved and findings related to: HD sharing attitudes (either in general or depending on type of data/user); barriers/motivators/benefits/concerns of the study participants; and sociodemographic and other variables that could impact HD sharing behaviour. The qualitative synthesis was conducted by dividing the studies according to the data type (resulting in five subgroups) as well as the purpose the data sharing was focused on (primary, secondary or both). The Newcastle--Ottawa Scale (NOS) was used to assess the quality of non-randomised studies. This work was registered with PROSPERO, CRD42023413822. Findings Of 2109 studies identified through our search, 116 were included in the qualitative synthesis, yielding a total of 228,501 participants and various types of HD represented: person-generated HD (n~=~17 studies and 10,771 participants), personal HD in general (n~=~69 studies and 117,054 participants), Biobank data (n~=~7 studies and 27,073 participants), genomic data (n~=~13 studies and 54,716 participants), and miscellaneous data (n~=~10 studies and 18,887 participants). The majority of studies had a moderate level of quality (83 [71.6\%] of 116 studies), but varying levels of quality were observed across the included studies. Overall, studies suggest that sharing intentions for primary purposes were observed to be high regardless of data type, and it was higher than sharing intentions for secondary purposes. Sharing for secondary purposes yielded variable findings, where both the highest and the lowest intention rates were observed in the case of studies that explored sharing biobank data (98\% and 10\%, respectively). Several influencing factors on sharing intentions were identified, such as the type of data recipient, data, consent. Further, concerns related to data sharing that were found to be mutual for all data types included privacy, security, and data access/control, while the perceived benefits included those related to improvements in healthcare. Findings regarding attitudes towards sharing varied significantly across sociodemographic factors and depended on data type and type of use. In most cases, these findings were derived from single studies and therefore warrant confirmations from additional studies. Interpretation Sharing health data is a complex issue that is influenced by various factors (the type of health data, the intended use, the data recipient, among others) and these insights could be used to overcome barriers, address people's concerns, and focus on spreading awareness about the data sharing process and benefits. Funding None.},
+  keywords = {Biobank,Data sharing,Genomic data,Person-generated data,Personal health data,Secondary use},
+  file = {/Users/dkapitan/Zotero/storage/YDZJAPLK/Cascini et al. - 2024 - Health data sharing attitudes towards primary and .pdf;/Users/dkapitan/Zotero/storage/95FF755R/S2589537024001305.html}
 }
 
 @misc{chapter,
@@ -601,22 +695,6 @@
   file = {/Users/dkapitan/Zotero/storage/RRF87LYK/Guillot et al. - 2023 - FAIR sharing of health data a systematic review o.pdf}
 }
 
-@inproceedings{hai2023amalura,
-  title = {Amalur: {{Data Integration Meets Machine Learning}}},
-  shorttitle = {Amalur},
-  booktitle = {2023 {{IEEE}} 39th {{International Conference}} on {{Data Engineering}} ({{ICDE}})},
-  author = {Hai, Rihan and Koutras, Christos and Ionescu, Andra and Li, Ziyu and Sun, Wenbo and {van Schijndel}, Jessie and Kang, Yan and Katsifodimos, Asterios},
-  year = {2023},
-  month = apr,
-  pages = {3729--3739},
-  issn = {2375-026X},
-  doi = {10.1109/ICDE55515.2023.00301},
-  urldate = {2024-04-02},
-  abstract = {Machine learning (ML) training data is often scattered across disparate collections of datasets, called data silos. This fragmentation poses a major challenge for data-intensive ML applications: integrating and transforming data residing in different sources demand a lot of manual work and computational resources. With data privacy and security constraints, data often cannot leave the premises of data silos, hence model training should proceed in a decentralized manner. In this work, we present a vision of how to bridge the traditional data integration (DI) techniques with the requirements of modern machine learning. We explore the possibilities of utilizing metadata obtained from data integration processes for improving the effectiveness and efficiency of ML models. Towards this direction, we analyze two common use cases over data silos, feature augmentation and federated learning. Bringing data integration and machine learning together, we highlight new research opportunities from the aspects of systems, representations, factorized learning and federated learning.},
-  keywords = {Computational modeling,Data integration,Data privacy,Federated learning,Manuals,Training,Training data},
-  file = {/Users/dkapitan/Zotero/storage/CJD4NMQP/Hai et al. - 2023 - Amalur Data Integration Meets Machine Learning.pdf}
-}
-
 @article{hai2023data,
   title = {Data {{Lakes}}: {{A Survey}} of {{Functions}} and {{Systems}}},
   shorttitle = {Data {{Lakes}}},
@@ -712,6 +790,19 @@
   file = {/Users/dkapitan/Zotero/storage/EELN7V6H/HCX SWITCH TERMS AND CONDITIONS.pdf}
 }
 
+@article{henderson1990architectural,
+  title = {Architectural {{Innovation}}: {{The Reconfiguration}} of {{Existing Product Technologies}} and the {{Failure}} of {{Established Firms}}},
+  shorttitle = {Architectural {{Innovation}}},
+  author = {Henderson, Rebecca and Clark, Kim},
+  year = {1990},
+  month = mar,
+  journal = {Administrative science quarterly},
+  volume = {35},
+  doi = {10.2307/2393549},
+  abstract = {This paper demonstrates that the traditional categorization of innovation as either incremental or radical is incomplete and potentially misleading and does not account for the sometimes disastrous effects on industry incumbents of seemingly minor improvements in technological products. We examine such innovations more closely and, distinguishing between the components of a product and the ways they are integrated into the system that is the product "architecture," define them as innovations that change the architecture of a product without changing its components. We show that architectural innovations destroy the usefulness of the architectural knowledge of established firms, and that since architectural knowledge tends to become embedded in the structure and information-processing procedures of established organizations, this destruction is difficult for firms to recognize and hard to correct. Architectural innovation therefore presents established organizations with subtle challenges that may have significant competitive implications. We illustrate the concept's explanatory force through an empirical study of the semiconductor photolithographic alignment equipment industry, which has experienced a number of architectural innovations.},
+  file = {/Users/dkapitan/Zotero/storage/MQ3LJSDK/Henderson and Clark - 1990 - Architectural Innovation The Reconfiguration of E.pdf}
+}
+
 @article{hersh2015outcomes,
   title = {Outcomes {{From Health Information Exchange}}: {{Systematic Review}} and {{Future Research Needs}}},
   shorttitle = {Outcomes {{From Health Information Exchange}}},
@@ -745,6 +836,22 @@
   author = {H{\"o}c{\"u}k, Seyit and Kumar, Pradeep and Mulder, Joris and Pr{\"u}fer, Patricia and Martens, Bertin},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/YAXFJ9ZR/Höcük et al. - Economies of scope in the aggregation of health-re.pdf}
+}
+
+@article{hoepman2023opinions,
+  title = {Opinions {$\bullet$} {{Privacy Is Hard}} and {{Seven Other Myths}}},
+  author = {Hoepman, Jaap-Henk},
+  year = {2023},
+  journal = {European Data Protection Law Review},
+  volume = {9},
+  number = {2},
+  pages = {104--111},
+  publisher = {Lexxion Publisher},
+  issn = {2364284X},
+  doi = {10.21552/edpl/2023/2/5},
+  urldate = {2024-05-17},
+  langid = {english},
+  file = {/Users/dkapitan/Zotero/storage/84AHCJZG/Hoepman - 2023 - Opinions ∙ Privacy Is Hard and Seven Other Myths.pdf}
 }
 
 @misc{homea,
@@ -1118,6 +1225,24 @@
   pmid = {34648368},
   keywords = {governance,health services,LMICs,low- and middle-income countries,mHealth,mobile,private sector},
   file = {/Users/dkapitan/Zotero/storage/GZE38JCR/McCool et al. - 2022 - Mobile Health (mHealth) in Low- and Middle-Income .pdf}
+}
+
+@article{mceachen2023enabling,
+  title = {{{ENABLING KNOWLEDGE SHARING BY MANAGING DEPENDENCIES AND INTEROPERABILITY BETWEEN INTERLINKED SPATIAL KNOWLEDGE GRAPHS}}},
+  author = {McEachen, N. and Lewis, J.},
+  year = {2023},
+  month = jun,
+  journal = {The International Archives of the Photogrammetry, Remote Sensing and Spatial Information Sciences},
+  volume = {XLVIII-4-W7-2023},
+  pages = {117--124},
+  publisher = {Copernicus GmbH},
+  issn = {1682-1750},
+  doi = {10.5194/isprs-archives-XLVIII-4-W7-2023-117-2023},
+  urldate = {2024-04-26},
+  abstract = {Knowledge sharing is increasingly being recognized as necessary to address societal, economic, environmental, and public health challenges. This often requires collaboration between federal, local, and tribal governments along with the private sector, nonprofit organizations, and institutions of higher education. To achieve this, there needs to be a move away from data-centric to knowledge sharing architectures, such as a Geospatial Knowledge Infrastructure (GKI). Data from multiple organizations need to be properly contextualized in both space and time to support geographically based planning, decision making, cooperation and coordination. A spatial knowledge graph (SKG) is a useful paradigm for facilitating knowledge sharing and collaboration. However, interoperability between independently developed SKGs from different organizations that reference the same geographies is often not automated in a machine-readable way due to a lack of standardization. This paper outlines an architecture that automates interoperability and dependency management between SKGs as they are formally published by version and period of validity. We are calling this approach a spatial knowledge mesh (SKM), as it is a specialization of the data mesh architecture along with the concept of a common geo-registry to facilitate knowledge sharing more easily. The initial implementation, called GeoPrism Registry, is being developed as an open-source spatial knowledge infrastructure as a platform to help countries meet their NSDI and GKI objectives. It was fist funded and deployed to support ministries of health and is more recently being utilized in GeoPlatform.gov.},
+  langid = {english},
+  keywords = {Common Geo-Registry,Data Mesh,Graph Repository,Interoperability,Ontology,Spatial Knowledge Graph,Spatial Knowledge Mesh},
+  file = {/Users/dkapitan/Zotero/storage/HVRNP5MZ/McEachen and Lewis - 2023 - ENABLING KNOWLEDGE SHARING BY MANAGING DEPENDENCIE.pdf}
 }
 
 @article{mehl2020open,
@@ -1502,6 +1627,23 @@
   file = {/Users/dkapitan/Zotero/storage/YAS29HS9/Purnama Jati et al. - 2022 - Data Access, Control, and Privacy Protection in th.pdf;/Users/dkapitan/Zotero/storage/474AADCY/Data-Access-Control-and-Privacy-Protection-in-the.html}
 }
 
+@article{purtova2023data,
+  title = {Data as an Economic Good, Data as a Commons, and Data Governance},
+  author = {Purtova, Nadya and {van Maanen}, Gijs},
+  year = {2023},
+  journal = {Law, Innovation and Technology},
+  volume = {0},
+  number = {0},
+  pages = {1--42},
+  publisher = {Routledge},
+  issn = {1757-9961},
+  doi = {10.1080/17579961.2023.2265270},
+  urldate = {2024-02-05},
+  abstract = {This paper provides a systematic and critical review of the economics literature on data as an economic good and draws lessons for data governance. We conclude that focusing on data as an economic good in governance efforts is hardwired to only result in more data production and cannot deliver other societal goals contrary to what is often claimed in the literature and policy. Data governance is often a red herring which distracts from other digital problems. The governance of digital society cannot rely exclusively on data-centric economic models. We review the literatures and the underlying empirical and political claims concerning data commons. While commons thinking is useful to frame digital problems in terms of ecologies, it has important limitations. We propose a political-ecological approach to governing the digital society, defined by ecological thinking about governance problems and the awareness of the political nature of framing the problems and mapping their ecological makeup.},
+  keywords = {data as a resource,data commons,Data economy,data governance,data sharing,digital commons},
+  file = {/Users/dkapitan/Zotero/storage/6LEBH2LH/Purtova and van Maanen - 2023 - Data as an economic good, data as a commons, and d.pdf}
+}
+
 @article{raso2024anonymization,
   title = {Anonymization and {{Pseudonymization}} of {{FHIR Resources}} for {{Secondary Use}} of {{Healthcare Data}}},
   author = {Raso, Emanuele and Loreti, Pierpaolo and Ravaziol, Michele and Bracciale, Lorenzo},
@@ -1516,6 +1658,13 @@
   copyright = {https://creativecommons.org/licenses/by-nc-nd/4.0/},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/ID8DIMLU/Raso et al. - 2024 - Anonymization and Pseudonymization of FHIR Resourc.pdf}
+}
+
+@misc{reflexive,
+  title = {A {{Reflexive Account}} of {{Reusing Qualitative Data}}: {{Beyond Primary}}/{{Secondary Dualism}} - {{Libby Bishop}}, 2007},
+  urldate = {2024-05-17},
+  howpublished = {https://journals-sagepub-com.dianus.libr.tue.nl/doi/full/10.5153/sro.1553?casa\_token=PWhfY4sonZoAAAAA\%3A14bTcX9n0WmvAjOEnOsmedIpXVVvlLKnmVOD0d5iJJOfBJ-nRrDumAnlOVBx4H\_EJrsyZA3SfXTn},
+  file = {/Users/dkapitan/Zotero/storage/PL6GLEXZ/sro.html}
 }
 
 @article{rieke2020future,
@@ -1553,6 +1702,59 @@
   pmid = {34042774},
   keywords = {data model,Electronic Health Records,FHIR,Hospitals University,Humans,interoperability,mapping,Medical Informatics,microbiology,OMOP CDM,openEHR,standard},
   file = {/Users/dkapitan/Zotero/storage/EM32TJND/Rinaldi and Thun - 2021 - From OpenEHR to FHIR and OMOP Data Model for Micro.pdf}
+}
+
+@article{rochet2003platform,
+  title = {Platform {{Competition}} in {{Two-sided Markets}}},
+  author = {Rochet, Jean-Charles and Tirole, Jean},
+  year = {2003},
+  journal = {Journal of the European Economic Association},
+  volume = {1},
+  number = {4},
+  eprint = {40005175},
+  eprinttype = {jstor},
+  pages = {990--1029},
+  publisher = {Oxford University Press},
+  issn = {1542-4766},
+  urldate = {2024-04-23},
+  abstract = {Many if not most markets with network externalities are two-sided. To succeed, platforms in industries such as software, portals and media, payment systems and the Internet, must "get both sides of the market on board." Accordingly, platforms devote much attention to their business model, that is, to how they court each side while making money overall. This paper builds a model of platform competition with two-sided markets. It unveils the determinants of price allocation and end-user surplus for different governance structures (profit-maximizing platforms and not-for-profit joint undertakings), and compares the outcomes with those under an integrated monopolist and a Ramsey planner.}
+}
+
+@misc{rubegni2024designing,
+  title = {Designing for {{Complementarity}}: {{A Conceptual Framework}} to {{Go Beyond}} the {{Current Paradigm}} of {{Using XAI}} in {{Healthcare}}},
+  shorttitle = {Designing for {{Complementarity}}},
+  author = {Rubegni, Elisa and Ayoub, Omran and Rizzo, Stefania Maria Rita and Barbero, Marco and Bernegger, Guenda and Faraci, Francesca and Mangili, Francesca and Soldini, Emiliano and Trimboli, Pierpaolo and Facchini, Alessandro},
+  year = {2024},
+  month = apr,
+  number = {arXiv:2404.04638},
+  eprint = {2404.04638},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2404.04638},
+  urldate = {2024-04-25},
+  abstract = {The widespread use of Artificial Intelligence-based tools in the healthcare sector raises many ethical and legal problems, one of the main reasons being their black-box nature and therefore the seemingly opacity and inscrutability of their characteristics and decision-making process. Literature extensively discusses how this can lead to phenomena of over-reliance and under-reliance, ultimately limiting the adoption of AI. We addressed these issues by building a theoretical framework based on three concepts: Feature Importance, Counterexample Explanations, and Similar-Case Explanations. Grounded in the literature, the model was deployed within a case study in which, using a participatory design approach, we designed and developed a high-fidelity prototype. Through the co-design and development of the prototype and the underlying model, we advanced the knowledge on how to design AI-based systems for enabling complementarity in the decision-making process in the healthcare domain. Our work aims at contributing to the current discourse on designing AI systems to support clinicians' decision-making processes.},
+  archiveprefix = {arxiv},
+  keywords = {Computer Science - Human-Computer Interaction},
+  file = {/Users/dkapitan/Zotero/storage/CCIUUDNK/Rubegni et al. - 2024 - Designing for Complementarity A Conceptual Framew.pdf;/Users/dkapitan/Zotero/storage/5FLUS7VV/2404.html}
+}
+
+@article{s.oliveira2019investigations,
+  title = {Investigations into {{Data Ecosystems}}: A Systematic Mapping Study},
+  shorttitle = {Investigations into {{Data Ecosystems}}},
+  author = {S.~Oliveira, Marcelo Iury and Barros~Lima, Gl{\'o}ria de F{\'a}tima and Farias~L{\'o}scio, Bernadette},
+  year = {2019},
+  month = nov,
+  journal = {Knowledge and Information Systems},
+  volume = {61},
+  number = {2},
+  pages = {589--630},
+  issn = {0219-3116},
+  doi = {10.1007/s10115-018-1323-6},
+  urldate = {2024-05-15},
+  abstract = {Data Ecosystems are socio-technical complex networks in which actors interact and collaborate with each other to find, archive, publish, consume, or reuse data as well as to foster innovation, create value, and support new businesses. While the Data Ecosystem field is thus arguably gaining in importance, research on this subject is still in its early stages of development. Up until now, not many academic papers related to Data Ecosystems have been published. Furthermore, to the best of our knowledge, there has been no systematic review of the literature on Data Ecosystems. In this study, we provide an overview of the current literature on Data Ecosystems by conducting a systematic mapping study. This study is intended to function as a snapshot of the research in the field and by doing so identifies the different definitions of Data Ecosystem and analyzes the evolution of Data Ecosystem research. The studies selected have been classified into categories related to the study method, contribution, research topic, and ecosystem domains. Finally, we analyze how Data Ecosystems are structured and organized, and what benefits can be expected from Data Ecosystems and what their limitations are.},
+  langid = {english},
+  keywords = {Data consumption,Data Ecosystem,Data provision,Systematic mapping},
+  file = {/Users/dkapitan/Zotero/storage/UFNR2ME9/S. Oliveira et al. - 2019 - Investigations into Data Ecosystems a systematic .pdf}
 }
 
 @article{sachs2019six,
@@ -1605,6 +1807,26 @@
   abstract = {Multisite medical data sharing is critical in modern clinical practice and medical research. The challenge is to conduct data sharing that preserves individual privacy and data utility. The shortcomings of traditional privacy-enhancing technologies mean that institutions rely upon bespoke data sharing contracts. The lengthy process and administration induced by these contracts increases the inefficiency of data sharing and may disincentivize important clinical treatment and medical research.  This paper provides a synthesis between 2 novel advanced privacy-enhancing technologies---homomorphic encryption and secure multiparty computation (defined together as multiparty homomorphic encryption). These privacy-enhancing technologies provide a mathematical guarantee of privacy, with multiparty homomorphic encryption providing a performance advantage over separately using homomorphic encryption or secure multiparty computation. We argue multiparty homomorphic encryption fulfills legal requirements for medical data sharing under the European Union's General Data Protection Regulation which has set a global benchmark for data protection. Specifically, the data processed and shared using multiparty homomorphic encryption can be considered anonymized data. We explain how multiparty homomorphic encryption can reduce the reliance upon customized contractual measures between institutions. The proposed approach can accelerate the pace of medical research while offering additional incentives for health care and research institutes to employ common data interoperability standards.},
   langid = {english},
   file = {/Users/dkapitan/Zotero/storage/BIPL5LCK/Scheibner et al. - 2021 - Revolutionizing Medical Data Sharing Using Advance.pdf;/Users/dkapitan/Zotero/storage/3VFDQHT8/e25120.html}
+}
+
+@article{sein2011action,
+  title = {Action {{Design Research}}},
+  author = {Sein, Maung and Henfridsson, Ola and Purao, Sandeep and Rossi, Matti and Lindgren, Rikard},
+  year = {2011},
+  month = mar,
+  journal = {MIS Quarterly},
+  volume = {35},
+  pages = {37--56},
+  doi = {10.2307/23043488},
+  abstract = {Design research (DR) positions information technology artifacts at the core of the Information Systems discipline. However, dominant DR thinking takes a technological view of the IT artifact, paying scant attention to its shaping by the organizational context. Consequently, existing DR methods focus on building the artifact and relegate evaluation to a subsequent and separate phase. They value technological rigor at the cost of organizational relevance, and fail to recognize that the artifact emerges from interaction with the organizational context even when its initial design is guided by the researchers' intent. We propose action design research (ADR) as a new DR method to address this problem. ADR reflects the premise that IT artifacts are ensembles shaped by the organizational context during development and use. The method conceptualizes the research process as containing the inseparable and inherently interwoven activities of building the IT artifact, intervening in the organization, and evaluating it concurrently. The essay describes the stages of ADR and associated principles that encapsulate its underlying beliefs and values. We illustrate ADR through a case of competence management at Volvo IT.},
+  file = {/Users/dkapitan/Zotero/storage/7GPEFL3I/Sein et al. - 2011 - Action Design Research.pdf}
+}
+
+@misc{selforganization,
+  title = {Self-{{Organization}} and {{Resilience}} for {{Networked Systems}}: {{Design Principles}} and {{Open Research Issues}} {\textbar} {{IEEE Journals}} \& {{Magazine}} {\textbar} {{IEEE Xplore}}},
+  urldate = {2024-04-28},
+  howpublished = {https://ieeexplore-ieee-org.dianus.libr.tue.nl/abstract/document/8645632?casa\_token=cmxSVwavipcAAAAA:ELDWFCKprHVtS5OWxyT9PhYUpld5ashU69pBr5LGG\_UObnSfiIzFq288TUHjH2STWz231maA},
+  file = {/Users/dkapitan/Zotero/storage/W7D82H2C/Self-Organization and Resilience for Networked Sys.pdf}
 }
 
 @article{sharon2018when,
