--- a/index.qmd
+++ b/index.qmd
@@ -62,6 +62,11 @@ author:
       - name: Australian e-Health Research Centre
         city: Brisbane
         country: Australia
+  - name: Paula van Brakel
+    affiliations:
+      - name: PharmAccess Foundation
+        city: Amsterdam
+        country: the Netherlands
   - name: Mark van der Graaf
     affiliations:
       - name: PharmAccess Foundation
@@ -94,7 +99,7 @@ It is a widely held belief that digital technologies have an important role to p
 
 A commonly used perspective to scrutinize digital health is to consider it as a digital platform [@dereuver2018digital]. Digital platforms have disrupted many sectors but have just started to make inroads into highly regulated industries such as healthcare [@ozalp2022digital]. In this light, the challenges faced by LMICs in establishing national digital health platforms have a lot in common with those faced by high income countries. From a technological perspective, interoperability issues, weak integrations, siloed data repositories and overall lack of openness are often reported as key impediments [@malm-nicolais2023exploring;@mehl2023fullstac]. From a societal perspective, issues pertaining to the winner-takes-all nature of digital platforms are hotly debated as many jurisdictions make work to ensure these new digital health platforms indeed serve the common good of achieving universal health coverage [@sharon2018when].
 
-Case studies on digital platforms in healthcare point to an emerging pattern where the focus shifts from the digital platform with its defining software and hardware components, to the data as the primary object of interest in and of itself [@ozalp2022digital;@alaimo2022organizations]. This observation ties into the proposed research agenda by de Reuver et al. to consider data platforms as a phenomenon distinct from digital platforms [@dereuver2022openness]. Generally, data platforms inherit the characteristics of digital platforms. For example, the economic perspective on digital platforms stresses their multi-sidedness with developers and consumers, while data platforms are used by data owners, data consumers and third party solution providers. At the same time, data platforms differ as their main offerings revolve around data. From a market perspective, data platforms have more moderate network effects and are more susceptible to fragmentation and heterogeneity.
+Case studies on digital platforms in healthcare point to an emerging pattern where the focus shifts from the digital platform with its defining software and hardware components, to the data as the primary object of interest in and of itself [@ozalp2022digital;@alaimo2022organizations]. This development roughly correlates with the commonly used distinction between primary and secondary health data sharing [@cascini2024health]. While people are generally willing to share their health data to receive the best care (primary use), the attitude towards secondary use of health data varies greatly depending on the type and context. The shift in perspective from digital platforms supporting primary data sharing toward data platforms supporting secondary data sharing, ties in with the proposed research agenda by de Reuver et al. to consider data platforms as a phenomenon distinct from digital platforms [@dereuver2022openness]. Generally, data platforms inherit the characteristics of digital platforms. From an economic perspective, for example, both types exhibit multi-sided markets. At the same time, data platforms differ as their main offerings revolve around data. From an ecosystem perspective, data platforms have more moderate network effects and are more susceptible to fragmentation and heterogeneity.
 
 Particularly relevant in the context of health data platforms (HDPs), is the conceptualization of openness. The shift in perspective from digital platforms to data platforms coincides with the paradox of open [@keller2021paradox]. Originally, openness of digital platforms focused on open source, open standards and copyrights, which by has been superseded by “... conflicts about privacy, economic value extraction, the emergence of artificial intelligence, and the destabilizing effects of dominant platforms on (democratic) societies. Instead of access to information, the control of personal data has emerged in the age of platforms as the critical contention.” [@keller2021paradox]. These conflicts are particularly salient in the healthcare domain, as is evidenced by the polemic surrounding data spaces [@otto2022designing] and data solidarity [@kickbusch2021lancet;@prainsack2022data;@prainsack2023beyond]. Openness is particularly relevant if we are to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@prainsack2022data].  
 
@@ -102,7 +107,9 @@ Particularly relevant in the context of health data platforms (HDPs), is the con
 
 This paper is motivated by the conflation of a number of developments relevant to the design and implementation of open, solidarity-based HDPs in LMICs. First, the OpenHIE framework [@openhie] has been adopted by many sub-Saharan African countries [@mamuye2022health] as the architectural blueprint for implementing nation-wide health information exchanges (HIE), including Nigeria [@dalhatu2023paper], Kenya [@thaiya2021adoption] and Tanzania [@nsaghurwe2021one]. These countries have, as a matter of course, extended the framework to include “analytics services” as an additional domain. The rationale for this addition is to facilitate secondary reuse of health data for academic research, real-world evidence studies etc. which can be framed within the context of ongoing efforts towards Findable, Accessible, Interoperable and Reusable (FAIR) sharing of health data [@guillot2023fair]. In doing so, however, we have implicitly moved from conceptualizing digital health platforms (the original OpenHIE specification) to health data platforms. This is problematic because the notion of openness, which is assumed to be essential in establishing solidarity-based approaches to data sharing, is inherently different for a data platform compared to a digital platform.
 
-Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods [@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for data sharing and reuse. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs.  The purpose of this paper, therefore, is to specificy how new standards and technologies can be integrated into the OpenHIE architecture such that an open HDP can be realized that supports the four types of data sharing as defined by de Reuver at al. (@tbl-types-data-sharing).
+Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods [@digitalpublicgoods]. Typically, these open source components are intended to support deployment in small countries (population up to 10 million) or large NGOs out of the box, and should provide a stepping stone for customized deployments in medium-sized countries (population around 40 million).[^1]  If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for data sharing and reuse. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs.  The purpose of this paper, therefore, is to specificy how new standards and technologies can be integrated into the OpenHIE architecture such that an open HDP can be realized that supports the four types of data sharing as defined by de Reuver at al. (@tbl-types-data-sharing).
+
+[^1]: Although the OpenHIE specification does not include details on dimensioning, these are typically the requirements that are used within the community. See [OpenHIE Community Wiki](https://wiki.ohie.org/display/CP/Interoperability+Layer+-+Use+Cases+and+Requirements).
 
 |   | __Type of data sharing__ | __Technology enablers to create openness of health data platforms__ |
 |:-:|:-------|:-------------|
@@ -158,15 +165,17 @@ Possible risks pertaining to the use of FHIR as the common data model, most nota
 
 #### Evolving the data lakehouse to a composable data stack
 
-Data management and analytics platforms have undergone significant changes since the first generation of data warehouses were introduced. Recent studies have shown that the current practice has converged towards the lakehouse as one of the most commonly used solution designs [@armbrust2021lakehouse;@hai2023data;@harby2022data]. Lakehouses typically have a zonal architecture that follow the Extract-Load-Transform pattern (ELT) where data is ingested from the source systems in bulk (E), delivered to storage with aligned schemas (L) and transformed into a format ready for analysis (T) [@hai2023data]. The discerning characteristic of the lakehouse architecture is its foundation on low-cost and directly-accessible storage that also provides traditional analytical DBMS management and performance features such as ACID transactions, data versioning, auditing, indexing, caching, and query optimization [@armbrust2021lakehouse]. Lakehouses thus combine the key benefits of data lakes and data warehouses: low-cost storage in an open format accessible by a variety of systems from the former, and powerful management and optimization features from the latter.
+Data management and analytics platforms have undergone significant changes since the first generation of data warehouses were introduced. Recent studies have shown that the current practice has converged towards the lakehouse as one of the most commonly used solution designs [@armbrust2021lakehouse;@hai2023data;@harby2022data]. Lakehouses typically have a zonal architecture that follow the Extract-Load-Transform pattern (ELT) where data is ingested from the source systems in bulk (E), delivered to storage with aligned schemas (L) and transformed into a format ready for analysis (T) [@hai2023data]. The discerning characteristic of the lakehouse architecture is its foundation on low-cost and directly-accessible storage that also provides traditional database management and performance features such as ACID transactions, data versioning, auditing, indexing, caching, and query optimization [@armbrust2021lakehouse]. Lakehouses thus combine the key benefits of data lakes and data warehouses: low-cost storage in an open format accessible by a variety of systems from the former, and powerful management and optimization features from the latter.
 
 With respect to current implementations of lakehouse data platforms, we observe a proliferation of tools with as yet limited standards to improve technical interoperability. In the analysis of Pedreira et al. [@pedreira2023composable] the requirement for specialization in data management systems has evolved faster than our software development practices. This situation has created a siloed landscape composed of hundreds of products developed and maintained as monoliths, with limited reuse between systems. It has also affected the end users, who are often required to learn the idiosyncrasies of dozens of incompatible SQL and non-SQL API dialects, and settle for systems with incomplete functionality and inconsistent semantics. To remedy this, Pedreira et al. call to (re-)design and implement modern data platforms in terms of a 'composable data stack’ as a means to decrease development and maintenance cost and pick-up the speed of innovation.
 
 While the lakehouse architecture separates the concerns of compute and storage, the composable data stack takes the separation of concerns is taken one step further. A composable data system (@fig-composable-data-stack), not only separates the storage (layer 3) and execution (layer 2), but also separates the user interface (layer 1) from the execution engine by introducing standards including Substrait for Intermediate Representation (standard A, IR) and Apache Arrow for data connectivity and data memory layout (standards B and C, respectively). The composable data stack can be implemented with current open source technologies (@fig-cds-examples). As an example, the Ibis user interface is currently sufficiently mature to offer a standardized dataframe interface to 19 different execution engines.
 
-![The composable data stack. Image source: [https://voltrondata.com/codex](https://voltrondata.com/codex).](images/composable-data-stack.png){#fig-composable-data-stack}
+::: {#fig-composable-data-stack layout-nrow=2 fig-cap="Schematic overview of the composable data stack showing a) the overall architecture and b) examples of implementations. Images taken from [https://voltrondata.com/codex](https://voltrondata.com/codex)."}
+![a)](images/composable-data-stack.png)
 
-![Examples of implementations of the composable data stack. Image source: [https://voltrondata.com/codex](https://voltrondata.com/codex).](images/composable-data-stack-implementation-2.png){#fig-cds-examples}
+![b)](images/composable-data-stack-implementation-2.png)
+:::
 
 #### SQL-on-FHIR v2 as an intermediate representation for FHIR data in tabular format
 
@@ -256,7 +265,11 @@ Today, many components of the OpenHIE specification are now available as a digit
 | | | [OpenCR](https://www.openclientregistry.org/) |
 | | | [OpenCRVS](https://www.opencrvs.org/) |
 | | Facility Registry (FR) | [Global Open Facility Registry (GOFR)](https://github.com/intrahealth/gofr) |
-| | | [GeoPrism Registry (GPR)](https://geoprismregistry.com/) `|
+| | | [GeoPrism Registry (GPR)](https://geoprismregistry.com/) |
+| | | [Resource Map](http://instedd.org/technologies/resource-map/) |
+| | | [Healthsite.io](https://healthsites.io/) |
+| | | [GeoPrism Registry](https://geoprismregistry.com/) |
+| | | [DHIS2](https://github.com/dhis2) |
 | | Health Worker Registry (HWR) | [iHRIS](https://www.ihris.org/ihris-50) |
 | | Terminology Service (TS) | [OCL Terminology Service](https://openconceptlab.org/terminology-service/) |
 | | Product Catalog (PC) | [PCMT](https://productcatalog.io/) |
@@ -264,7 +277,7 @@ Today, many components of the OpenHIE specification are now available as a digit
 | | | [Fhirbase](https://www.health-samurai.io/fhirbase) |
 | | | [FHIR Server for Azure](https://github.com/microsoft/fhir-server) |
 | | | [I-TECH-UW SHR](https://github.com/I-TECH-UW/shared-health-record) |
-| | Health Management Information System (HMIS) | [DHIS2](http://dhis2.org/) |
+| | Health Management Information System (HMIS)[^2] | [DHIS2](http://dhis2.org/) |
 | | Finance and Insurance Service (FIS) | [OpenIMIS](http://openimis.org/) |
 | | Logistics Management Information System (LMIS) | [OpenLMIS](http://openlmis.org/) |
 | | | [OpenBoxes](https://openboxes.com/features/) |
@@ -273,7 +286,9 @@ Today, many components of the OpenHIE specification are now available as a digit
 | | Admin dashboard for SHR | [OpenSRP FHIR Web](https://github.com/onaio/fhir-web) |
 | | Configuration and deployment | [Instant OpenHIE](https://jembi.gitbook.io/instant-v2/) |
 
-: Overview of current open source implementations of components that fit in the OpenHIE specification. The category Analytics Services is not a part of the original OpenHIE and is discussed in the paper. Point-of-Service systems are excluded for brevity.List compiled using [Global Goods for Digital Health](https://digitalsquare.org/digital-health-global-goods), [Digital Public Goods Alliance](https://digitalpublicgoods.net/) and search of open source code repositories.  A systematic review of such digital public goods is beyond the scope of this document.  {#tbl-digital-public-goods .striped .hover .responsive}
+: Overview of current open source implementations of components that fit in the OpenHIE specification. The category Analytics Services is not a part of the original OpenHIE and is discussed in this paper. Point-of-Service systems are excluded for brevity.List compiled using [OpenHIE Reference Technologies](https://wiki.ohie.org/display/DR/OpenHIE+Reference+Technologies), [Global Goods for Digital Health](https://digitalsquare.org/digital-health-global-goods), [Digital Public Goods Alliance](https://digitalpublicgoods.net/) and search of open source code repositories. A systematic review of such digital public goods is beyond the scope of this document.  {#tbl-digital-public-goods .striped .hover .responsive}
+
+[^2]: Note that there is often a confusion on the acronym HMIS. Strictly speaking, the OpenHIE specification uses HMIS to refer to a Health Management Information System that is part of the Business Domain Services. Sometimes HMIS is used to refer to a Hospital Management Systems in the Point-of-Service domain, synonymous with an Electronic Medical Record (EMR) system.
 
 ## Evaluation
 
@@ -415,6 +430,7 @@ Requirements are similar, but implementation differs: Datamodel is non-FHIR, foc
 
 |    |    |
 |:---|:---|
+| ACID | Atomicity, Consistency, Isolation, and Durability |
 | CLI | Command-line Interface |
 | CR | Client Registry |
 | ELK | Elasticsearch, Logstach and Kibana stack |
