--- a/index.qmd
+++ b/index.qmd
@@ -37,11 +37,6 @@ author:
       - name: PharmAccess Kenya
         city: Nairobi
         country: Kenya
-  - name: Antragama Abbas
-    affiliations:
-      - name: Delft University of Technology
-        city: Delft
-        country: the Netherlands
   - name: Steven Wanyee
     affiliations:
       - name: IntelliSOFT
@@ -67,6 +62,7 @@ author:
       - name: PharmAccess Foundation
         city: Amsterdam
         country: the Netherlands
+
   - name: Mark van der Graaf
     affiliations:
       - name: PharmAccess Foundation
@@ -76,6 +72,11 @@ author:
     affiliations:
       - name: PharmAccess Foundation
         city: Amsterdam
+        country: the Netherlands
+  - name: Antragama Abbas
+    affiliations:
+      - name: Delft University of Technology
+        city: Delft
         country: the Netherlands
   - name: Mark de Reuver
     affiliations:
@@ -99,19 +100,17 @@ It is a widely held belief that digital technologies have an important role to p
 
 A commonly used perspective to scrutinize digital health is to consider it as a digital platform [@dereuver2018digital]. Digital platforms have disrupted many sectors but have just started to make inroads into highly regulated industries such as healthcare [@ozalp2022digital]. In this light, the challenges faced by LMICs in establishing national digital health platforms have a lot in common with those faced by high income countries. From a technological perspective, interoperability issues, weak integrations, siloed data repositories and overall lack of openness are often reported as key impediments [@malm-nicolais2023exploring;@mehl2023fullstac]. From a societal perspective, issues pertaining to the winner-takes-all nature of digital platforms are hotly debated as many jurisdictions make work to ensure these new digital health platforms indeed serve the common good of achieving universal health coverage [@sharon2018when].
 
-Case studies on digital platforms in healthcare point to an emerging pattern where the focus shifts from the digital platform with its defining software and hardware components, to the data as the primary object of interest in and of itself [@ozalp2022digital;@alaimo2022organizations]. This development roughly correlates with the commonly used distinction between primary and secondary health data sharing [@cascini2024health]. While people are generally willing to share their health data to receive the best care (primary use), the attitude towards secondary use of health data varies greatly depending on the type and context. The shift in perspective from digital platforms supporting primary data sharing toward data platforms supporting secondary data sharing, ties in with the proposed research agenda by de Reuver et al. to consider data platforms as a phenomenon distinct from digital platforms [@dereuver2022openness]. Generally, data platforms inherit the characteristics of digital platforms. From an economic perspective, for example, both types exhibit multi-sided markets. At the same time, data platforms differ as their main offerings revolve around data. From an ecosystem perspective, data platforms have more moderate network effects and are more susceptible to fragmentation and heterogeneity.
+Case studies on digital platforms in healthcare point to an emerging pattern where the focus shifts from the digital platform with its defining software and hardware components, to the data as the primary object of interest in and of itself [@ozalp2022digital;@alaimo2022organizations]. This observation ties into with the proposed research agenda by de Reuver et al. to consider data platforms as a phenomenon distinct from digital platforms [@dereuver2022openness]. Generally, data platforms inherit the characteristics of digital platforms. From an economic perspective, for example, both types exhibit multi-sided markets. At the same time, data platforms differ as their main offerings revolve around data. From an ecosystem perspective, data platforms have more moderate network effects and are more susceptible to fragmentation and heterogeneity.
 
-Particularly relevant in the context of health data platforms (HDPs), is the conceptualization of openness. The shift in perspective from digital platforms to data platforms coincides with the paradox of open [@keller2021paradox]. Originally, openness of digital platforms focused on open source, open standards and copyrights, which by has been superseded by “... conflicts about privacy, economic value extraction, the emergence of artificial intelligence, and the destabilizing effects of dominant platforms on (democratic) societies. Instead of access to information, the control of personal data has emerged in the age of platforms as the critical contention.” [@keller2021paradox]. These conflicts are particularly salient in the healthcare domain, as is evidenced by the polemic surrounding data spaces [@otto2022designing] and data solidarity [@kickbusch2021lancet;@prainsack2022data;@prainsack2023beyond]. Openness is particularly relevant if we are to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@prainsack2022data].  
+Particularly relevant in the context of health data platforms (HDPs), is the conceptualization of openness. The shift in perspective from digital platforms to data platforms coincides with the paradox of open [@keller2021paradox]. Originally, openness of digital platforms focused on open source, open standards and copyrights, which by has been superseded by “... conflicts about privacy, economic value extraction, the emergence of artificial intelligence, and the destabilizing effects of dominant platforms on (democratic) societies. Instead of access to information, the control of personal data has emerged in the age of platforms as the critical contention.” [@keller2021paradox]. These conflicts are particularly salient in the healthcare domain, where people are generally willing to share their health data to receive the best care (primary use), while the attitude towards secondary use of health data varies greatly depending on the type and context [@cascini2024health]. The shift in perspective from digital platforms supporting primary data sharing toward data platforms supporting secondary data sharing is one of the key issues surrounding the polemic of data spaces [@otto2022designing] and data solidarity [@kickbusch2021lancet;@prainsack2022data;@prainsack2023beyond]. Openness is particularly relevant if we are to realize a solidarity-based approach to health data sharing that i) gives people a greater control over their data as active decision makers; ii) ensures that the value of data is harnessed for public good; and iii) moves society towards equity and justice by counteracting dynamics of data extraction [@prainsack2022data].  
 
 ### From health information exchanges to health data platforms
 
-This paper is motivated by the conflation of a number of developments relevant to the design and implementation of open, solidarity-based HDPs in LMICs. First, the OpenHIE framework [@openhie] has been adopted by many sub-Saharan African countries [@mamuye2022health] as the architectural blueprint for implementing nation-wide health information exchanges (HIE), including Nigeria [@dalhatu2023paper], Kenya [@thaiya2021adoption] and Tanzania [@nsaghurwe2021one]. These countries have, as a matter of course, extended the framework to include “analytics services” as an additional domain. The rationale for this addition is to facilitate secondary reuse of health data for academic research, real-world evidence studies etc. which can be framed within the context of ongoing efforts towards Findable, Accessible, Interoperable and Reusable (FAIR) sharing of health data [@guillot2023fair]. In doing so, however, we have implicitly moved from conceptualizing digital health platforms (the original OpenHIE specification) to health data platforms. This is problematic because the notion of openness, which is assumed to be essential in establishing solidarity-based approaches to data sharing, is inherently different for a data platform compared to a digital platform.
+This paper is motivated by the conflation of a number of developments relevant to the design and implementation of open, solidarity-based HDPs in LMICs. First, the OpenHIE framework [@openhie] has been adopted by many sub-Saharan African countries [@mamuye2022health] as the architectural blueprint for implementing nation-wide health information exchanges (HIE), including Nigeria [@dalhatu2023paper], Kenya [@thaiya2021adoption] and Tanzania [@nsaghurwe2021one]. These countries have, as a matter of course, extended the framework to include “data & analytics services” as an additional domain. The rationale for this addition is to facilitate secondary reuse of health data for academic research, real-world evidence studies etc. which can be framed within the context of ongoing efforts towards Findable, Accessible, Interoperable and Reusable (FAIR) sharing of health data [@guillot2023fair]. In doing so, however, we have implicitly moved from conceptualizing digital health platforms for primary data sharing (the original OpenHIE specification) to health data platforms for secondary data sharing. This is problematic because the notion of openness, which is assumed to be essential in establishing solidarity-based approaches to data sharing, is inherently different for a data platform compared to a digital platform.
 
-Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods [@digitalpublicgoods]. Typically, these open source components are intended to support deployment in small countries (population up to 10 million) or large NGOs out of the box, and should provide a stepping stone for customized deployments in medium-sized countries (population around 40 million).[^1]  If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for data sharing and reuse. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs.  The purpose of this paper, therefore, is to specificy how new standards and technologies can be integrated into the OpenHIE architecture such that an open HDP can be realized that supports the four types of data sharing as defined by de Reuver at al. (@tbl-types-data-sharing).
+Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods [@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for secondary data sharing and reuse. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs.  The purpose of this paper, therefore, is to specificy how new standards and technologies can be integrated into the OpenHIE architecture such that an open HDP can be realized that supports the four types of data sharing as defined by de Reuver at al. (@tbl-types-data-sharing).
 
-[^1]: Although the OpenHIE specification does not include details on dimensioning, these are typically the requirements that are used within the community. See [OpenHIE Community Wiki](https://wiki.ohie.org/display/CP/Interoperability+Layer+-+Use+Cases+and+Requirements).
-
-|   | __Type of data sharing__ | __Technology enablers to create openness of health data platforms__ |
+|   | __Type of secondary data sharing__ | __Technology enablers to create openness of health data platforms__ |
 |:-:|:-------|:-------------|
 | __1__ | Data at the most granular (patient) level, which is persisted and used to provide a longitudinal record. | __Bulk FHIR API__: has by now been incorporated in all major FHIR implementations the FHIR standard can be readily used to support data sharing to patient-level data across a patient population [@mandl2020push;@jones2021landscape]. |
 | __2__ | Aggregated data, for example statistics for policy evaluation and benchmarking |__SQL-on-FHIR specification__ [@sql-on-fhir]: provides a standardised approach to make FHIR work well with familiar and efficient SQL engines that are most commonly used in analytical workflows. Builds on FHIRPath [@hl72020fhirpath] expressions in a logical structure to specify things like column names and unnested items. Implementations of this approach are available or forthcoming, including open source implementations such as Pathling [@grimes2022pathling] and commercial offerings like Aidbox [@aidbox].|
@@ -125,7 +124,7 @@ Conceptually, the OpenHIE framework constitutes a framework for an open digital 
 In this paper, we present a design that extends the OpenHIE specification to include the four types of data sharing mentioned above. Using the full-STAC approach [@mehl2023fullstac] we combine open standards, open technologies and open architectures into a coherent modular HDP platform that can be configured and reused across a variety of use-cases. We employ a formative, naturalistic evaluation to assess the technical risk and efficacy of the design [@venable2016feds]. Given that it is prohibitively expensive to evaluate the design a real-world setting, we aim to minimize technological risks and maximize the efficacy of the design by considering three examples of health data platforms in LMICs, namely:
 
  1. the OpenHIM platform ([https://jembi.gitbook.io/openhim-platform/](https://jembi.gitbook.io/openhim-platform/))
- 2. the ONA Canopy platform [https://ona.io/home/services/canopy/](https://ona.io/home/services/canopy/)
+ 2. the OnaData platform [https://ona.io/home/products/ona-data/features/](https://ona.io/home/products/ona-data/features/)
  3. the work conducted at PharmAccess Foundation as part of the MomCare programme ([https://health-data-commons.pharmaccess.org](https://health-data-commons.pharmaccess.org)).
 
 These three real-world implementations are evaluated along the following dimensions:
@@ -169,7 +168,7 @@ Data management and analytics platforms have undergone significant changes since
 
 With respect to current implementations of lakehouse data platforms, we observe a proliferation of tools with as yet limited standards to improve technical interoperability. In the analysis of Pedreira et al. [@pedreira2023composable] the requirement for specialization in data management systems has evolved faster than our software development practices. This situation has created a siloed landscape composed of hundreds of products developed and maintained as monoliths, with limited reuse between systems. It has also affected the end users, who are often required to learn the idiosyncrasies of dozens of incompatible SQL and non-SQL API dialects, and settle for systems with incomplete functionality and inconsistent semantics. To remedy this, Pedreira et al. call to (re-)design and implement modern data platforms in terms of a 'composable data stack’ as a means to decrease development and maintenance cost and pick-up the speed of innovation.
 
-While the lakehouse architecture separates the concerns of compute and storage, the composable data stack takes the separation of concerns is taken one step further. A composable data system (@fig-composable-data-stack), not only separates the storage (layer 3) and execution (layer 2), but also separates the user interface (layer 1) from the execution engine by introducing standards including Substrait for Intermediate Representation (standard A, IR) and Apache Arrow for data connectivity and data memory layout (standards B and C, respectively). The composable data stack can be implemented with current open source technologies (@fig-cds-examples). As an example, the Ibis user interface is currently sufficiently mature to offer a standardized dataframe interface to 19 different execution engines.
+While the lakehouse architecture separates the concerns of compute and storage, the composable data stack takes the separation of concerns is taken one step further. A composable data system (@fig-composable-data-stack), not only separates the storage (layer 3) and execution (layer 2), but also separates the user interface (layer 1) from the execution engine by introducing standards including Substrait for Intermediate Representation (standard A, IR) and Apache Arrow for data connectivity and data memory layout (standards B and C, respectively). The first generation of open source components are already available. For example, the Ibis user interface is currently sufficiently mature to offer a standardized dataframe interface to 19 different execution engines [@ibisproject].
 
 ::: {#fig-composable-data-stack layout-nrow=2 fig-cap="Schematic overview of the composable data stack showing a) the overall architecture and b) examples of implementations. Images taken from [https://voltrondata.com/codex](https://voltrondata.com/codex)."}
 ![a)](images/composable-data-stack.png)
@@ -253,7 +252,9 @@ Default workflow is extraction of data from SHR using Bulk FHIR API. Data contai
 
 ### Open technologies: deploying Instant OpenHIE with digital public goods
 
-Today, many components of the OpenHIE specification are now available as a digital public goods, as listed in @tbl-digital-public-goods. To further ease the development, configuration and deployment of health information exchanges, the concept of 'Instant OpenHIE' has been championed to (i) allow implementers to engage with a preconfigured health information exchange solution and running tools (based on the architecture) and test their applicability and functionality with a real health context problem; and (ii) have a packaged reference version of the OpenHIE architecture that is comprised of a set of reference technologies and other appropriate tools that form the building blocks of the health information exchange that can be configured and extended to support particular use cases [@InstantOpenHIEv2]. Besides the core functional components of the OpenHIE architecture, the Instant OpenHIE toolkit allows packaging and integration of generic components such as Identity and Access Managment (IAM) and a reverse proxy gateway. In the following, we will evaluatie three of such configurations, with the aim to conceptualize and evaluate the proposed Data and Analytics Services domain of of the OpenHIE architecture.
+Today, many components of the OpenHIE specification are now available as a digital public goods, as listed in @tbl-digital-public-goods. Typically, these open source components are intended to support deployments in small countries (population up to 10 million) or large NGOs out of the box, and should provide a stepping stone for customized deployments in medium-sized countries (population around 40 million).[^1] To further ease the development, configuration and deployment of health information exchanges, the concept of 'Instant OpenHIE' has been championed to (i) allow implementers to engage with a preconfigured health information exchange solution and running tools (based on the architecture) and test their applicability and functionality with a real health context problem; and (ii) have a packaged reference version of the OpenHIE architecture that is comprised of a set of reference technologies and other appropriate tools that form the building blocks of the health information exchange that can be configured and extended to support particular use cases [@InstantOpenHIEv2]. Besides the core functional components of the OpenHIE architecture, the Instant OpenHIE toolkit allows packaging and integration of generic components such as Identity and Access Managment (IAM) and a reverse proxy gateway. In the following, we will evaluatie three of such configurations, with the aim to conceptualize and evaluate the proposed Data and Analytics Services domain of of the OpenHIE architecture.
+
+[^1]: Although the OpenHIE specification does not include details on dimensioning, these are typically the requirements that are used within the community. See [OpenHIE Community Wiki](https://wiki.ohie.org/display/CP/Interoperability+Layer+-+Use+Cases+and+Requirements).
 
 | Category  | Component | Digital Public Good |
 |:----------|:----------|:--------------------|
